src/objects/User.object
<CustomObject>
    <fields>
        <fullName>ASC_Code__c</fullName>
        <label>ASCCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BenefitDept__c</fullName>
        <formula>IF(CONTAINS(CSC_Report_Team__c, &quot;工程师&quot;), 
       IF( CONTAINS(CSC_Report_Team__c, &quot;行业二部&quot;) , 
              &quot;其他-行业二部&quot;, 
              IF( CONTAINS(CSC_Report_Team__c, &quot;行业一部&quot;) , 
                     &quot;其他-行业一部&quot;, 
                     IF( CONTAINS(CSC_Report_Team__c, &quot;黑龙江&quot;) , 
                            &quot;其他-黑龙江&quot;, 
                            IF( CONTAINS(CSC_Report_Team__c, &quot;内蒙古&quot;) , 
                                   &quot;其他-内蒙古&quot;, 
                                   IF( CONTAINS(CSC_Report_Team__c, &quot;增值业务&quot;) , 
                                          &quot;其他-增值业务&quot;, 
                                          (&quot;其他-&quot;+MID( CSC_Report_Team__c ,  FIND(&quot;-&quot;, CSC_Report_Team__c)+1 , 2))))))),
        &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BenefitDept</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Center_Name__c</fullName>
        <label>Business Center Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CN H3C North</fullName>
                </value>
                <value>
                    <fullName>CN H3C East</fullName>
                </value>
                <value>
                    <fullName>CN H3C South</fullName>
                </value>
                <value>
                    <fullName>CN H3C West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_CTI_Agent_Login_ID__c</fullName>
        <label>CTI Agent-Login ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_CTI_Extension__c</fullName>
        <label>CTI_Extension</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_CTI_Password__c</fullName>
        <label>CTI_Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Firmware_Version__c</fullName>
        <label>CSC_Firmware_Version</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Operating_System_Version__c</fullName>
        <label>CSC_Operating_System_Version</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Report_City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>云南-昆明</fullName>
                </value>
                <value>
                    <fullName>云南-玉溪</fullName>
                </value>
                <value>
                    <fullName>云南-红河</fullName>
                </value>
                <value>
                    <fullName>云南-开远</fullName>
                </value>
                <value>
                    <fullName>云南-曲靖</fullName>
                </value>
                <value>
                    <fullName>云南-昭通</fullName>
                </value>
                <value>
                    <fullName>云南-宣威</fullName>
                </value>
                <value>
                    <fullName>云南-怒江</fullName>
                </value>
                <value>
                    <fullName>云南-保山</fullName>
                </value>
                <value>
                    <fullName>云南-迪庆</fullName>
                </value>
                <value>
                    <fullName>云南-大理</fullName>
                </value>
                <value>
                    <fullName>云南-思茅</fullName>
                </value>
                <value>
                    <fullName>云南-丽江</fullName>
                </value>
                <value>
                    <fullName>云南-芒市</fullName>
                </value>
                <value>
                    <fullName>云南-畹町</fullName>
                </value>
                <value>
                    <fullName>云南-孟定</fullName>
                </value>
                <value>
                    <fullName>云南-楚雄</fullName>
                </value>
                <value>
                    <fullName>云南-滇南</fullName>
                </value>
                <value>
                    <fullName>云南-西双版纳</fullName>
                </value>
                <value>
                    <fullName>云南-其它城市</fullName>
                </value>
                <value>
                    <fullName>西藏-拉萨</fullName>
                </value>
                <value>
                    <fullName>西藏-山南</fullName>
                </value>
                <value>
                    <fullName>西藏-日喀则</fullName>
                </value>
                <value>
                    <fullName>四川-广安</fullName>
                </value>
                <value>
                    <fullName>四川-广元</fullName>
                </value>
                <value>
                    <fullName>四川-乐山</fullName>
                </value>
                <value>
                    <fullName>四川-眉山</fullName>
                </value>
                <value>
                    <fullName>四川-绵竹</fullName>
                </value>
                <value>
                    <fullName>四川-内江</fullName>
                </value>
                <value>
                    <fullName>四川-南充</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Report_Emp_Category__c</fullName>
        <label>Emp Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Intern</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Report_Emp_Type__c</fullName>
        <label>Emp Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>H3C</fullName>
                </value>
                <value>
                    <fullName>非H3C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Report_New_Role__c</fullName>
        <label>New Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FSC Reactive Customer Facing=L0/L1/L2</fullName>
                </value>
                <value>
                    <fullName>ASC Reactive Customer Facing=BCS L2</fullName>
                </value>
                <value>
                    <fullName>FSC Service Delivery Manager&gt;=SV</fullName>
                </value>
                <value>
                    <fullName>FSC Operations Support Staff=OPS</fullName>
                </value>
                <value>
                    <fullName>FSC Project / Program Mgr - Internal=Zhaokan</fullName>
                </value>
                <value>
                    <fullName>FSC Administrative Assistant=AA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Report_PGU__c</fullName>
        <label>PGU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ISS</fullName>
                </value>
                <value>
                    <fullName>L0</fullName>
                </value>
                <value>
                    <fullName>BCS</fullName>
                </value>
                <value>
                    <fullName>HPSD</fullName>
                </value>
                <value>
                    <fullName>HPN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Report_Primary_Role__c</fullName>
        <label>Primary Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FSC Reactive Customer Facing</fullName>
                </value>
                <value>
                    <fullName>ASC Reactive Customer Facing</fullName>
                </value>
                <value>
                    <fullName>FSC Project / Program Mgr - Internal</fullName>
                </value>
                <value>
                    <fullName>FSC Operations Support Staff</fullName>
                </value>
                <value>
                    <fullName>FSC Administrative Assistant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Report_Secondary_Role__c</fullName>
        <label>Secondary Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Technical Remote Specialist</fullName>
                </value>
                <value>
                    <fullName>Technical Solution Specialist</fullName>
                </value>
                <value>
                    <fullName>Customer Access Agent / Call Management Agent</fullName>
                </value>
                <value>
                    <fullName>Technical Solution Expert</fullName>
                </value>
                <value>
                    <fullName>General Support Specialist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Report_Start_date__c</fullName>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Team__c</fullName>
        <description>Field Update: Set Fields Team</description>
        <label>Team</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Self_Defined_CE_assist__c</fullName>
        <label>Log Activity CE assist</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Self_Defined_Call_from_customer__c</fullName>
        <label>Log Activity Call from customer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Self_Defined_Call_to_customer__c</fullName>
        <label>Log Activity Call to customer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Self_Defined_Case_OTC__c</fullName>
        <label>CSC_Self_Defined_Case_OTC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>05R-Normal Contract</fullName>
                </value>
                <value>
                    <fullName>02N-Warranty Normal</fullName>
                </value>
                <value>
                    <fullName>05A-Complmt TAC</fullName>
                </value>
                <value>
                    <fullName>05K-Extended Warranty</fullName>
                </value>
                <value>
                    <fullName>05Q-Preventative</fullName>
                </value>
                <value>
                    <fullName>02G-Sevice Note</fullName>
                </value>
                <value>
                    <fullName>06J-Intl Gratis</fullName>
                </value>
                <value>
                    <fullName>00C-Cust Claims Cont</fullName>
                </value>
                <value>
                    <fullName>00W-Cust Claims Warr</fullName>
                </value>
                <value>
                    <fullName>01-Trade</fullName>
                </value>
                <value>
                    <fullName>06M-Intl re-repair</fullName>
                </value>
                <value>
                    <fullName>05F-Comp Fld Inst</fullName>
                </value>
                <value>
                    <fullName>05S-Compl Site Prep</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Self_Defined_Case_Priority__c</fullName>
        <label>CSC_Self_Defined_Case_Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0-Immediate</fullName>
                </value>
                <value>
                    <fullName>1-Critical-Down</fullName>
                </value>
                <value>
                    <fullName>2-Critical-Degraded</fullName>
                </value>
                <value>
                    <fullName>3-Normal</fullName>
                </value>
                <value>
                    <fullName>4-Low Priority</fullName>
                </value>
                <value>
                    <fullName>SW-0</fullName>
                </value>
                <value>
                    <fullName>SW-1</fullName>
                </value>
                <value>
                    <fullName>SW-2</fullName>
                </value>
                <value>
                    <fullName>SW-3</fullName>
                </value>
                <value>
                    <fullName>SW-4</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Priority Complaint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Self_Defined_Case_Severity__c</fullName>
        <label>CSC_Self_Defined_Case_Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0-Immediate</fullName>
                </value>
                <value>
                    <fullName>1-Critical-Down</fullName>
                </value>
                <value>
                    <fullName>2-Critical-Degraded</fullName>
                </value>
                <value>
                    <fullName>3-Normal</fullName>
                </value>
                <value>
                    <fullName>4-Low Priority</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Self_Defined_Case_Type2__c</fullName>
        <label>CSC_Self_Defined_Case_Type2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>SN</fullName>
                </value>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>PC</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>RS</fullName>
                </value>
                <value>
                    <fullName>TS</fullName>
                </value>
                <value>
                    <fullName>Ins</fullName>
                </value>
                <value>
                    <fullName>ISS MA renew Onsite Check</fullName>
                </value>
                <value>
                    <fullName>ISSCTR Onsite check/Audit</fullName>
                </value>
                <value>
                    <fullName>ISS Install DOA</fullName>
                </value>
                <value>
                    <fullName>CHZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Self_Defined_Case_Type__c</fullName>
        <label>CSC_Self_Defined_Case_Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DEF</fullName>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Complnt Mgt/Cust Rel</fullName>
                </value>
                <value>
                    <fullName>Configuration</fullName>
                </value>
                <value>
                    <fullName>Document Request</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Feedback</fullName>
                </value>
                <value>
                    <fullName>HW Delivery</fullName>
                </value>
                <value>
                    <fullName>Install</fullName>
                </value>
                <value>
                    <fullName>Marketing/Prod Info</fullName>
                </value>
                <value>
                    <fullName>MC BCS</fullName>
                </value>
                <value>
                    <fullName>MC Non-BCS</fullName>
                </value>
                <value>
                    <fullName>Misrouted Call</fullName>
                </value>
                <value>
                    <fullName>New Service/Consult</fullName>
                </value>
                <value>
                    <fullName>Performance Tune/Chk</fullName>
                </value>
                <value>
                    <fullName>Proactive</fullName>
                </value>
                <value>
                    <fullName>Questions</fullName>
                </value>
                <value>
                    <fullName>SW Delivery</fullName>
                </value>
                <value>
                    <fullName>CE Assist</fullName>
                </value>
                <value>
                    <fullName>Please Specify</fullName>
                </value>
                <value>
                    <fullName>Depot Repair</fullName>
                </value>
                <value>
                    <fullName>ECAG Case (Fax)</fullName>
                </value>
                <value>
                    <fullName>ECAG Case (Letter)</fullName>
                </value>
                <value>
                    <fullName>ECAG Case (Phone)</fullName>
                </value>
                <value>
                    <fullName>ECAG Case (Email)</fullName>
                </value>
                <value>
                    <fullName>T&amp;M</fullName>
                </value>
                <value>
                    <fullName>Problem</fullName>
                </value>
                <value>
                    <fullName>Question</fullName>
                </value>
                <value>
                    <fullName>MC HW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Self_Defined_Case_cause__c</fullName>
        <label>CSC_Self_Defined_Case_ cause</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Self_Defined_Case_environment__c</fullName>
        <label>CSC_Self_Defined_Case_ environment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Self_Defined_Case_issue__c</fullName>
        <label>CSC_Self_Defined_Case_ issue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Self_Defined_Case_resolution__c</fullName>
        <label>CSC_Self_Defined_Case_ resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Self_Defined_Case_subject__c</fullName>
        <label>CSC_Self_Defined_Case_ subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Self_Defined_Close_Case_Comments__c</fullName>
        <label>CSC_Self_Defined_Close_Case_ Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Self_Defined_Default__c</fullName>
        <label>Log Activity Default</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Self_Defined_Incoming_Call__c</fullName>
        <label>Log Activity Incoming Call</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Self_Defined_Onsite_Action__c</fullName>
        <label>Log Activity Onsite Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Self_Defined_PGU__c</fullName>
        <label>CSC_Self_Defined_PGU</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ISS</fullName>
                </value>
                <value>
                    <fullName>HPSD</fullName>
                </value>
                <value>
                    <fullName>BLD</fullName>
                </value>
                <value>
                    <fullName>BCS</fullName>
                </value>
                <value>
                    <fullName>L0</fullName>
                </value>
                <value>
                    <fullName>HPN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Self_Defined_Plan_of_Action__c</fullName>
        <label>Log Activity Plan of Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Self_Defined_Research__c</fullName>
        <label>Log Activity Research</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Self_Defined_Troubleshooting__c</fullName>
        <label>Log Activity Troubleshooting</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Software_Product_Version__c</fullName>
        <label>CSC_Software_Product_Version</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CTR_Tel__c</fullName>
        <label>CTR值班电话</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Area__c</fullName>
        <label>City Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Upper__c</fullName>
        <formula>UPPER(City)</formula>
        <label>City Upper</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Uppercase__c</fullName>
        <formula>UPPER(City)</formula>
        <label>City Uppercase</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>H3C Employee ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Employee_Status__c</fullName>
        <description>Bruce Created to store the Legacy &quot;ED_Status__c&quot;</description>
        <label>Employee Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Leave With Pay</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Limited</fullName>
                </value>
                <value>
                    <fullName>Leave of Absence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>H4_Tel__c</fullName>
        <label>4H值班电话</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HPE_Email__c</fullName>
        <description>HPE_Email</description>
        <label>H3C Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HPE_Employee_ID__c</fullName>
        <label>HPE Employee ID(Domain)</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HPE_SFDC_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>HPE SFDC ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IPMS_BU__c</fullName>
        <label>IPMS BU</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NEC</fullName>
                </value>
                <value>
                    <fullName>BR</fullName>
                </value>
                <value>
                    <fullName>WW</fullName>
                </value>
                <value>
                    <fullName>SEA</fullName>
                </value>
                <value>
                    <fullName>SA</fullName>
                </value>
                <value>
                    <fullName>PS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPMS_Level__c</fullName>
        <label>IPMS Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Level1</fullName>
                </value>
                <value>
                    <fullName>Level2</fullName>
                </value>
                <value>
                    <fullName>Level3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>授权行业</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>电信</fullName>
                </value>
                <value>
                    <fullName>公共</fullName>
                </value>
                <value>
                    <fullName>金融</fullName>
                </value>
                <value>
                    <fullName>商业</fullName>
                </value>
                <value>
                    <fullName>网络</fullName>
                </value>
                <value>
                    <fullName>制造</fullName>
                </value>
                <value>
                    <fullName>other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Intermediate</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>其他说明</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>SY</fullName>
                </value>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>TR</fullName>
                </value>
                <value>
                    <fullName>MV-C</fullName>
                </value>
                <value>
                    <fullName>MV-P</fullName>
                </value>
                <value>
                    <fullName>TN</fullName>
                </value>
                <value>
                    <fullName>3C</fullName>
                </value>
                <value>
                    <fullName>1Y</fullName>
                </value>
                <value>
                    <fullName>LI</fullName>
                </value>
                <value>
                    <fullName>LL</fullName>
                </value>
                <value>
                    <fullName>7A</fullName>
                </value>
                <value>
                    <fullName>LJ</fullName>
                </value>
                <value>
                    <fullName>LK</fullName>
                </value>
                <value>
                    <fullName>6H</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
                <value>
                    <fullName>LHN</fullName>
                </value>
                <value>
                    <fullName>UZ</fullName>
                </value>
                <value>
                    <fullName>4Q</fullName>
                </value>
                <value>
                    <fullName>MV-S</fullName>
                </value>
                <value>
                    <fullName>CHZ</fullName>
                </value>
                <value>
                    <fullName>NULL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Code__c</fullName>
        <label>QueueCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repair_Level__c</fullName>
        <label>Repair Level</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NBD</fullName>
                </value>
                <value>
                    <fullName>SBD</fullName>
                </value>
                <value>
                    <fullName>CTR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBSB250__c</fullName>
        <label>SBSB250</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_18_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User 18 ID</label>
        <type>Text</type>
    </fields>
</CustomObject>